[gd_scene load_steps=10 format=3 uid="uid://d03b5eda1vtys"]

[ext_resource type="Script" path="res://addons/panku_console/console.gd" id="1_dohs1"]
[ext_resource type="PackedScene" path="res://addons/panku_console/components/resident_logs/resident_logs.tscn" id="2_th8we"]
[ext_resource type="Script" path="res://addons/panku_console/components/lynx_window2/lynx_windows.gd" id="3_7pj6w"]
[ext_resource type="PackedScene" uid="uid://c8yh1l5qboc2v" path="res://addons/panku_console/components/lynx_window2/lynx_window.tscn" id="4_x6krx"]
[ext_resource type="PackedScene" path="res://addons/panku_console/components/console_ui/panku_console_ui.tscn" id="5_vpp3o"]
[ext_resource type="Script" path="res://addons/panku_console/base_instance.gd" id="10_ik817"]
[ext_resource type="Script" path="res://addons/panku_console/widgets_env.gd" id="11_fn3g5"]
[ext_resource type="Script" path="res://addons/panku_console/engine_env.gd" id="12_rbugt"]
[ext_resource type="Script" path="res://addons/panku_console/console_env.gd" id="13_qpcmc"]

[node name="Console" type="CanvasLayer"]
process_mode = 3
layer = 128
script = ExtResource("1_dohs1")

[node name="ResidentLogs" parent="." instance=ExtResource("2_th8we")]
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 115.0
offset_right = 267.0
offset_bottom = -154.0
grow_vertical = 2

[node name="Widgets" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="LynxWindows" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("3_7pj6w")

[node name="ConsoleWindow" parent="LynxWindows" instance=ExtResource("4_x6krx")]
layout_mode = 0
offset_right = 421.0
offset_bottom = 304.0
grow_horizontal = 1
grow_vertical = 1
no_border = true
transparency = 0.9

[node name="TitleButton" parent="LynxWindows/ConsoleWindow/Body/Title" index="0"]
text = " "

[node name="PankuConsoleUI" parent="LynxWindows/ConsoleWindow/Body/Content" index="0" instance=ExtResource("5_vpp3o")]
layout_mode = 1

[node name="BaseInstance" type="Node" parent="."]
script = ExtResource("10_ik817")

[node name="widgets" type="Node" parent="."]
script = ExtResource("11_fn3g5")

[node name="engine" type="Node" parent="."]
script = ExtResource("12_rbugt")

[node name="console" type="Node" parent="."]
script = ExtResource("13_qpcmc")

[editable path="LynxWindows/ConsoleWindow"]
